@@ -1,3 +1,11 @@
+2007-08-20  Adam Roben  <aroben@apple.com>
+
+        Remove any mention of drwtsn32.log, as it is almost never useful for tracking down crashes
+
+        Reviewed by Oliver.
+
+        * quality/crashlogs.html:
+
 2007-07-26  Maciej Stachowiak  <mjs@apple.com>
 
         - grammar fix pointed out by Mitz.
